--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -11518,6 +11518,12 @@ msgstr ""
 msgid "DastProfiles|Spider timeout"
 msgstr ""
 
+msgid "DastProfiles|Submit button"
+msgstr ""
+
+msgid "DastProfiles|Submit button (optional)"
+msgstr ""
+
 msgid "DastProfiles|Target URL"
 msgstr ""
 
