Fix: i18n issue in sidebar job details container component
- Make titles for detail row i18n strings
- Extract i18n strings into i18n options.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -14577,6 +14577,9 @@ msgstr ""
 msgid "Epics|start"
 msgstr ""
 
+msgid "Erased"
+msgstr ""
+
 msgid "Error"
 msgstr ""
 
@@ -32325,6 +32328,9 @@ msgid "Run tests against your code live using the Web Terminal"
 msgstr ""
 
 msgid "Run untagged jobs"
+msgstr ""
+
+msgid "Runner"
 msgstr ""
 
 msgid "Runner API"
