--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -3722,9 +3722,6 @@ msgstr ""
 msgid "Allowed"
 msgstr ""
 
-msgid "Allowed Geo IP"
-msgstr ""
-
 msgid "Allowed characters: +, 0-9, -, and spaces."
 msgstr ""
 
@@ -9004,9 +9001,6 @@ msgstr ""
 msgid "Comma-separated list of email addresses."
 msgstr ""
 
-msgid "Comma-separated, e.g. '1.1.1.1, 2.2.2.0/24'"
-msgstr ""
-
 msgid "Command"
 msgstr ""
 
@@ -9589,9 +9583,6 @@ msgid "Connection failure"
 msgstr ""
 
 msgid "Connection timed out"
-msgstr ""
-
-msgid "Connection timeout"
 msgstr ""
 
 msgid "Consistency guarantee method"
@@ -16461,6 +16452,9 @@ msgstr ""
 msgid "Geo|Allow this secondary site to replicate content on Object Storage"
 msgstr ""
 
+msgid "Geo|Allowed Geo IP"
+msgstr ""
+
 msgid "Geo|Allowed Geo IP can't be blank"
 msgstr ""
 
@@ -16477,6 +16471,12 @@ msgid "Geo|Checksummed"
 msgstr ""
 
 msgid "Geo|Choose specific groups or storage shards"
+msgstr ""
+
+msgid "Geo|Comma-separated, e.g. '1.1.1.1, 2.2.2.0/24'"
+msgstr ""
+
+msgid "Geo|Connection timeout"
 msgstr ""
 
 msgid "Geo|Connection timeout can't be blank"
@@ -16537,6 +16537,9 @@ msgid "Geo|Filter by name"
 msgstr ""
 
 msgid "Geo|Filter by status"
+msgstr ""
+
+msgid "Geo|Geo Settings"
 msgstr ""
 
 msgid "Geo|Geo Status"
@@ -16779,6 +16782,9 @@ msgstr ""
 msgid "Geo|Selective synchronization"
 msgstr ""
 
+msgid "Geo|Set the timeout in seconds to send a secondary site status to the primary and IPs allowed for the secondary sites."
+msgstr ""
+
 msgid "Geo|Set verification limit and frequency."
 msgstr ""
 
@@ -16839,6 +16845,9 @@ msgstr ""
 msgid "Geo|There was an error deleting the Geo Site"
 msgstr ""
 
+msgid "Geo|There was an error fetching the Geo Settings"
+msgstr ""
+
 msgid "Geo|There was an error fetching the Geo Sites"
 msgstr ""
 
@@ -16848,6 +16857,9 @@ msgstr ""
 msgid "Geo|There was an error saving this Geo Site"
 msgstr ""
 
+msgid "Geo|There was an error updating the Geo Settings"
+msgstr ""
+
 msgid "Geo|This will resync all %{replicableType}. It may take some time to complete. Are you sure you want to continue?"
 msgstr ""
 
@@ -16855,6 +16867,9 @@ msgid "Geo|This will resync all projects. It may take some time to complete. Are
 msgstr ""
 
 msgid "Geo|This will reverify all projects. It may take some time to complete. Are you sure you want to continue?"
+msgstr ""
+
+msgid "Geo|Time in seconds"
 msgstr ""
 
 msgid "Geo|Tracking database entry will be removed. Are you sure?"
@@ -34697,9 +34712,6 @@ msgstr ""
 msgid "Set the per-user rate limit for notes created by web or API requests."
 msgstr ""
 
-msgid "Set the timeout in seconds to send a secondary site status to the primary and IPs allowed for the secondary sites."
-msgstr ""
-
 msgid "Set this number to 0 to disable the limit."
 msgstr ""
 
@@ -38265,9 +38277,6 @@ msgstr ""
 msgid "There was an error fetching the %{replicableType}"
 msgstr ""
 
-msgid "There was an error fetching the Geo Settings"
-msgstr ""
-
 msgid "There was an error fetching the deploy freezes."
 msgstr ""
 
@@ -38329,9 +38338,6 @@ msgid "There was an error syncing the %{replicableType}"
 msgstr ""
 
 msgid "There was an error trying to validate your query"
-msgstr ""
-
-msgid "There was an error updating the Geo Settings"
 msgstr ""
 
 msgid "There was an error updating the Maintenance Mode Settings"
@@ -39157,9 +39163,6 @@ msgid "Time from first commit until first comment"
 msgstr ""
 
 msgid "Time from last commit to merge"
-msgstr ""
-
-msgid "Time in seconds"
 msgstr ""
 
 msgid "Time of import: %{importTime}"
