--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -16512,6 +16512,9 @@ msgstr ""
 msgid "Geo|Edit %{nodeType} site"
 msgstr ""
 
+msgid "Geo|Edit your search and try again."
+msgstr ""
+
 msgid "Geo|Failed"
 msgstr ""
 
@@ -16585,6 +16588,9 @@ msgid "Geo|Never"
 msgstr ""
 
 msgid "Geo|Next sync scheduled at"
+msgstr ""
+
+msgid "Geo|No Geo site found"
 msgstr ""
 
 msgid "Geo|No available replication slots"
