Add a dropdown to switch language in code blocks
Allow switching code language in code blocks in content editor
using a dropdown bubble menu.

Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -10969,6 +10969,9 @@ msgstr ""
 msgid "CurrentUser|Start an Ultimate trial"
 msgstr ""
 
+msgid "Custom (%{language})"
+msgstr ""
+
 msgid "Custom Attributes"
 msgstr ""
 
@@ -11963,6 +11966,9 @@ msgid "Delete artifacts"
 msgstr ""
 
 msgid "Delete badge"
+msgstr ""
+
+msgid "Delete code block"
 msgstr ""
 
 msgid "Delete column"
