Change how cached images set for deletion are displayed
This changes the appareance of the table rows for images that are
set for deletion inside the dependency proxy cache

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -12216,6 +12216,9 @@ msgstr ""
 msgid "DependencyProxy|Image list"
 msgstr ""
 
+msgid "DependencyProxy|Scheduled for deletion"
+msgstr ""
+
 msgid "DependencyProxy|Storage settings"
 msgstr ""
 
