Clean up selection summary
Changelog: other
MR: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/85349
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -33764,6 +33764,9 @@ msgstr ""
 msgid "SecurityPolicies|Policy type"
 msgstr ""
 
+msgid "SecurityReports|%{count} Selected"
+msgstr ""
+
 msgid "SecurityReports|%{count}+ projects"
 msgstr ""
 
