Add details to test summary widget
Add list of test cases at level 3
Add recently failed counts

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -31659,6 +31659,9 @@ msgstr ""
 msgid "Reports|Filename"
 msgstr ""
 
+msgid "Reports|Fixed"
+msgstr ""
+
 msgid "Reports|Full report"
 msgstr ""
 
@@ -31687,6 +31690,9 @@ msgid "Reports|Metrics reports failed to load results"
 msgstr ""
 
 msgid "Reports|Metrics reports: %{strong_start}%{numberOfChanges}%{strong_end} %{changes}"
+msgstr ""
+
+msgid "Reports|New"
 msgstr ""
 
 msgid "Reports|Scanner"
