Improve trial only CTAs in Learn GitLab
- For trial-only CTAs in Learn GitLab redirect admins of the namespace to
the start-trial page, all other users to the relevant GitLab
Docs.
- Use uniqueId for popover-id in LearnGitLab
- Add assertive tests for disabled links in LearnGitLab
- Modify the button size to small in LearnGitLabLink

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -22329,6 +22329,9 @@ msgstr ""
 msgid "LearnGitLab|Your team is growing! You've successfully invited new team members to the %{projectName} project."
 msgstr ""
 
+msgid "LearnGitlab|Contact your administrator to start a free Ultimate trial."
+msgstr ""
+
 msgid "LearnGitlab|Creating your onboarding experience..."
 msgstr ""
 
@@ -22336,6 +22339,9 @@ msgid "LearnGitlab|Ok, let's go"
 msgstr ""
 
 msgid "LearnGitlab|Trial only"
+msgstr ""
+
+msgid "LearnGitlab|View administrator list"
 msgstr ""
 
 msgid "Leave"
