--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -23736,6 +23736,9 @@ msgstr ""
 msgid "Merge request %{mr_link} was reviewed by %{mr_author}"
 msgstr ""
 
+msgid "Merge request actions"
+msgstr ""
+
 msgid "Merge request analytics"
 msgstr ""
 
@@ -31620,9 +31623,6 @@ msgid "Reply…"
 msgstr ""
 
 msgid "Repo by URL"
-msgstr ""
-
-msgid "Report %{display_issuable_type} that are abusive, inappropriate or spam."
 msgstr ""
 
 msgid "Report abuse"
