--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -19385,6 +19385,9 @@ msgstr ""
 msgid "InProductMarketing|Break down silos to coordinate seamlessly across development, operations, and security with a consistent experience across the development lifecycle."
 msgstr ""
 
+msgid "InProductMarketing|Building for iOS? We've got you covered."
+msgstr ""
+
 msgid "InProductMarketing|Burn up/down charts"
 msgstr ""
 
@@ -19505,6 +19508,9 @@ msgstr ""
 msgid "InProductMarketing|Get our import guides"
 msgstr ""
 
+msgid "InProductMarketing|Get set up to build for iOS"
+msgstr ""
+
 msgid "InProductMarketing|Get started today"
 msgstr ""
 
@@ -19614,6 +19620,9 @@ msgid "InProductMarketing|Keep your code quality high by defining who should app
 msgstr ""
 
 msgid "InProductMarketing|Launch GitLab CI/CD in 20 minutes or less"
+msgstr ""
+
+msgid "InProductMarketing|Learn how to build for iOS"
 msgstr ""
 
 msgid "InProductMarketing|Lower cost of development"
@@ -19799,7 +19808,13 @@ msgstr ""
 msgid "InProductMarketing|Visualize your epics and milestones in a timeline."
 msgstr ""
 
+msgid "InProductMarketing|Want to get your iOS app up and running, including publishing all the way to TestFlight? Follow our guide to set up GitLab and fastlane to publish iOS apps to the App Store."
+msgstr ""
+
 msgid "InProductMarketing|Want to host GitLab on your servers?"
+msgstr ""
+
+msgid "InProductMarketing|Watch iOS building in action."
 msgstr ""
 
 msgid "InProductMarketing|We know a thing or two about efficiency and we don't want to keep that to ourselves. Sign up for a free trial of GitLab Ultimate and your teams will be on it from day one."
