Fix(apple_app_store): remove protected ref check from integration
Apple App Store integration now available for use in Merge Requests

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -5403,6 +5403,12 @@ msgstr ""
 msgid "AppleAppStore|Leave empty to use your current Private Key."
 msgstr ""
 
+msgid "AppleAppStore|Only set variables on protected branches and tags"
+msgstr ""
+
+msgid "AppleAppStore|Protected branches and tags only"
+msgstr ""
+
 msgid "AppleAppStore|The Apple App Store Connect Issuer ID."
 msgstr ""
 
