--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -21536,6 +21536,9 @@ msgstr ""
 msgid "GroupSettings|Email notifications are disabled"
 msgstr ""
 
+msgid "GroupSettings|Enable overview background aggregation for Value Streams Dashboard"
+msgstr ""
+
 msgid "GroupSettings|Export group"
 msgstr ""
 
@@ -21627,6 +21630,9 @@ msgid "GroupSettings|Transfer group"
 msgstr ""
 
 msgid "GroupSettings|Users can create %{link_start_project}project access tokens%{link_end} and %{link_start_group}group access tokens%{link_end} in this group"
+msgstr ""
+
+msgid "GroupSettings|Value Streams Dashboard"
 msgstr ""
 
 msgid "GroupSettings|What are badges?"
