--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -47726,6 +47726,9 @@ msgstr ""
 msgid "Unauthenticated web rate limit period in seconds"
 msgstr ""
 
+msgid "Unauthorized to update the environment"
+msgstr ""
+
 msgid "Unavailable"
 msgstr ""
 
