Allow adding prometheus-type integrations to HttpIntegrations
Adds support for adding Prometheus alert integrations to the
AlertManagement::HttpIntegrations table. This commit covers
database, models, and service changes, but the new type is
not yet available via API. This will happen in a follow-up.

This change helps enable the removal of Metrics Dashboard
by separating metrics from alert ingestion.

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -26442,6 +26442,9 @@ msgstr ""
 msgid "Leave zen mode"
 msgstr ""
 
+msgid "Legacy Prometheus integrations cannot currently be removed"
+msgstr ""
+
 msgid "Legacy Web IDE"
 msgstr ""
 
@@ -29128,13 +29131,13 @@ msgstr ""
 msgid "Multi-project"
 msgstr ""
 
-msgid "Multiple HTTP integrations are not supported for this project"
-msgstr ""
-
 msgid "Multiple IP address ranges are supported. Does not affect access to the group's settings."
 msgstr ""
 
 msgid "Multiple Prometheus integrations are not supported"
+msgstr ""
+
+msgid "Multiple integrations of a single type are not supported for this project"
 msgstr ""
 
 msgid "Multiple signatures"
