Add "Main navigation" accessible name to sidebar navigation
Add `aria-label` to `<nav>` element
Add spec test

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -29448,6 +29448,9 @@ msgstr ""
 msgid "Navigation|Leave admin mode"
 msgstr ""
 
+msgid "Navigation|Main navigation"
+msgstr ""
+
 msgid "Navigation|Manage"
 msgstr ""
 
