Improve accessibility of creating tables
In content editor, improve keyboard navigation to create tables
and make it more accessible using a screen reader.

Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -23791,7 +23791,7 @@ msgstr ""
 msgid "Input the remote repository URL"
 msgstr ""
 
-msgid "Insert a %{rows}x%{cols} table."
+msgid "Insert a %{rows}×%{cols} table"
 msgstr ""
 
 msgid "Insert a quote"
