Adds CI information to candidate detail
If a candidate is associated to a ci_build, render some information
about that CI on the detail page

Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -8383,6 +8383,9 @@ msgstr ""
 msgid "CHANGELOG"
 msgstr ""
 
+msgid "CI"
+msgstr ""
+
 msgid "CI Lint"
 msgstr ""
 
@@ -28979,6 +28982,9 @@ msgid "MlExperimentTracking|Parameters"
 msgstr ""
 
 msgid "MlExperimentTracking|Status"
+msgstr ""
+
+msgid "MlExperimentTracking|Triggered by"
 msgstr ""
 
 msgid "Modal updated"
