Improve branches and tags in commit view
Add new CommitReferences component, fetch references on the frontend

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -11098,6 +11098,18 @@ msgstr ""
 msgid "Committed-before"
 msgstr ""
 
+msgid "Commit|Branches"
+msgstr ""
+
+msgid "Commit|Tags"
+msgstr ""
+
+msgid "Commit|There was an error fetching the commit references. Please try again later."
+msgstr ""
+
+msgid "Commit|containing commit"
+msgstr ""
+
 msgid "Community forum"
 msgstr ""
 
