User Profile - Snippets in Vue Init
This change aims to being the
conversion the User Profile
Snippets tab to Vue.

The goal here is to try and
keep the UI as similar as
possible to the current
implementation.

This change in particular
focuses on setting up the tab
and pagination.  The snippet
rows will be added in a follow
up MR.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -48745,6 +48745,9 @@ msgstr ""
 msgid "UserList|created %{timeago}"
 msgstr ""
 
+msgid "UserProfiles|No snippets found."
+msgstr ""
+
 msgid "UserProfile|Activity"
 msgstr ""
 
