Add moderation status to spamlogs index
Add a moderation status to the soamlogs index page to more easily
identity if a user has been banned or blocked.

part of:
https://gitlab.com/gitlab-org/modelops/anti-abuse/team-tasks/-/issues/364

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -48679,6 +48679,9 @@ msgstr ""
 msgid "User Settings"
 msgstr ""
 
+msgid "User Status"
+msgstr ""
+
 msgid "User and IP rate limits"
 msgstr ""
 
