--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -47928,6 +47928,9 @@ msgstr ""
 msgid "Unauthenticated web rate limit period in seconds"
 msgstr ""
 
+msgid "Unauthorized to access the cluster agent in this project"
+msgstr ""
+
 msgid "Unauthorized to create an environment"
 msgstr ""
 
