--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -27775,7 +27775,7 @@ msgstr ""
 msgid "Max authenticated Git LFS requests per period per user"
 msgstr ""
 
-msgid "Max file size is 200 KB."
+msgid "Max file size is 200 KiB."
 msgstr ""
 
 msgid "Max role"
@@ -27826,7 +27826,7 @@ msgstr ""
 msgid "Maximum attachment size"
 msgstr ""
 
-msgid "Maximum attachment size (MB)"
+msgid "Maximum attachment size (MiB)"
 msgstr ""
 
 msgid "Maximum authenticated API requests per rate limit period per user"
@@ -27853,7 +27853,7 @@ msgstr ""
 msgid "Maximum diff patch size"
 msgstr ""
 
-msgid "Maximum diff patch size (Bytes)"
+msgid "Maximum diff patch size (bytes)"
 msgstr ""
 
 msgid "Maximum duration of a session."
@@ -27862,7 +27862,7 @@ msgstr ""
 msgid "Maximum export size"
 msgstr ""
 
-msgid "Maximum export size (MB)"
+msgid "Maximum export size (MiB)"
 msgstr ""
 
 msgid "Maximum field length"
@@ -27898,7 +27898,7 @@ msgstr ""
 msgid "Maximum import size"
 msgstr ""
 
-msgid "Maximum import size (MB)"
+msgid "Maximum import size (MiB)"
 msgstr ""
 
 msgid "Maximum job artifact size"
@@ -27970,7 +27970,7 @@ msgstr ""
 msgid "Maximum push size"
 msgstr ""
 
-msgid "Maximum push size (MB)"
+msgid "Maximum push size (MiB)"
 msgstr ""
 
 msgid "Maximum requests per 10 minutes per IP address"
@@ -28003,7 +28003,7 @@ msgstr ""
 msgid "Maximum size of individual attachments in comments."
 msgstr ""
 
-msgid "Maximum size of pages (MB)"
+msgid "Maximum size of pages (MiB)"
 msgstr ""
 
 msgid "Maximum snippet size"
@@ -38724,7 +38724,7 @@ msgstr ""
 msgid "Repository size is above the limit."
 msgstr ""
 
-msgid "Repository size limit (MB)"
+msgid "Repository size limit (MiB)"
 msgstr ""
 
 msgid "Repository storage"
@@ -42914,7 +42914,7 @@ msgstr ""
 msgid "Size Limits"
 msgstr ""
 
-msgid "Size limit per repository (MB)"
+msgid "Size limit per repository (MiB)"
 msgstr ""
 
 msgid "Skip to main content"
