Add personal namespace code suggestions settings
* User can opt out of code suggestions if the group they belong to
  enables it.
* https://gitlab.com/gitlab-org/gitlab/-/issues/411936

Changelog: added
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -10856,13 +10856,22 @@ msgstr ""
 msgid "CodeSuggestions|%{link_start}What are code suggestions?%{link_end}"
 msgstr ""
 
-msgid "CodeSuggestions|By enabling this feature, you accept the %{link_start}Testing Terms of Use%{link_end}."
-msgstr ""
-
 msgid "CodeSuggestions|Code Suggestions"
 msgstr ""
 
-msgid "CodeSuggestions|Projects in this group can use Code Suggestions in VS Code"
+msgid "CodeSuggestions|Enable Code Suggestions"
+msgstr ""
+
+msgid "CodeSuggestions|Get code suggestions as you write code in your IDE. %{link_start}Learn more.%{link_end}"
+msgstr ""
+
+msgid "CodeSuggestions|Projects in this group can use Code Suggestions"
+msgstr ""
+
+msgid "CodeSuggestions|Subject to the %{link_start}Testing Terms of Use%{link_end}"
+msgstr ""
+
+msgid "CodeSuggestions|Subject to the %{link_start}Testing Terms of Use%{link_end}."
 msgstr ""
 
 msgid "Cohorts|Inactive users"
