Updates "Submit" button with "Create runner"
After inputting details of the runner the user to the next screen to
register the runner, this step creates a new runner record.

Text in the "Submit" button is replaced with "Create runner" to convey
this.

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -38908,6 +38908,9 @@ msgstr ""
 msgid "Runners|Create an instance runner to generate a command that registers the runner with all its configurations."
 msgstr ""
 
+msgid "Runners|Create runner"
+msgstr ""
+
 msgid "Runners|Created %{timeAgo}"
 msgstr ""
 
