--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -38389,6 +38389,9 @@ msgid_plural "Requires %{count} approvals from %{names}."
 msgstr[0] ""
 msgstr[1] ""
 
+msgid "Requires a verified GitLab email address."
+msgstr ""
+
 msgid "Requires values to meet regular expression requirements."
 msgstr ""
 
