--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -22282,6 +22282,9 @@ msgstr ""
 msgid "I accept the %{terms_link}"
 msgstr ""
 
+msgid "I am sorry, I am unable to find the issue you are looking for."
+msgstr ""
+
 msgid "I do not know."
 msgstr ""
 
