Adds a deploy section for groups
Moves package registry to the new menu

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -29508,6 +29508,9 @@ msgstr ""
 msgid "Navigation|Context navigation"
 msgstr ""
 
+msgid "Navigation|Deploy"
+msgstr ""
+
 msgid "Navigation|Enter admin mode"
 msgstr ""
 
