--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -10862,6 +10862,15 @@ msgstr ""
 msgid "CodeQuality|New code quality degradations on this line"
 msgstr ""
 
+msgid "CodeSuggestionsAlert|Code faster and more efficiently with AI-powered code suggestions in VS Code. 13 languages are supported, including Javascript, Python, Go, Java, and Kotlin. Enable Code Suggestions in your %{preference_link_start}user profile preferences%{link_end} or %{docs_link_start}see the documentation%{link_end} to learn more."
+msgstr ""
+
+msgid "CodeSuggestionsAlert|Enable Code Suggestions"
+msgstr ""
+
+msgid "CodeSuggestionsAlert|Get started with Code Suggestions, available for free during the beta period."
+msgstr ""
+
 msgid "CodeSuggestions|%{link_start}What are code suggestions?%{link_end}"
 msgstr ""
 
