--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -12352,6 +12352,9 @@ msgstr ""
 msgid "Copy environment"
 msgstr ""
 
+msgid "Copy epic URL"
+msgstr ""
+
 msgid "Copy evidence SHA"
 msgstr ""
 
@@ -12365,6 +12368,9 @@ msgid "Copy file path"
 msgstr ""
 
 msgid "Copy image URL"
+msgstr ""
+
+msgid "Copy issue URL"
 msgstr ""
 
 msgid "Copy issue URL to clipboard"
@@ -12386,6 +12392,9 @@ msgid "Copy link URL"
 msgstr ""
 
 msgid "Copy link to chart"
+msgstr ""
+
+msgid "Copy merge request URL"
 msgstr ""
 
 msgid "Copy reference"
@@ -15915,6 +15924,9 @@ msgstr ""
 msgid "Display alerts from all configured monitoring tools."
 msgstr ""
 
+msgid "Display as:"
+msgstr ""
+
 msgid "Display milestones"
 msgstr ""
 
@@ -17223,6 +17235,9 @@ msgstr ""
 msgid "Epic Boards"
 msgstr ""
 
+msgid "Epic ID"
+msgstr ""
+
 msgid "Epic actions"
 msgstr ""
 
@@ -17239,6 +17254,12 @@ msgid "Epic events"
 msgstr ""
 
 msgid "Epic not found for given params"
+msgstr ""
+
+msgid "Epic summary"
+msgstr ""
+
+msgid "Epic title"
 msgstr ""
 
 msgid "Epics"
@@ -24755,6 +24776,9 @@ msgstr ""
 msgid "Issue Boards"
 msgstr ""
 
+msgid "Issue ID"
+msgstr ""
+
 msgid "Issue Type"
 msgstr ""
 
@@ -24798,6 +24822,12 @@ msgid "Issue or merge request ID is required"
 msgstr ""
 
 msgid "Issue published on status page."
+msgstr ""
+
+msgid "Issue summary"
+msgstr ""
+
+msgid "Issue title"
 msgstr ""
 
 msgid "Issue types"
@@ -27972,6 +28002,9 @@ msgstr ""
 msgid "Merge request %{mr_link} was reviewed by %{mr_author}"
 msgstr ""
 
+msgid "Merge request ID"
+msgstr ""
+
 msgid "Merge request actions"
 msgstr ""
 
@@ -27997,6 +28030,12 @@ msgid "Merge request reports"
 msgstr ""
 
 msgid "Merge request status"
+msgstr ""
+
+msgid "Merge request summary"
+msgstr ""
+
+msgid "Merge request title"
 msgstr ""
 
 msgid "Merge request was scheduled to merge after pipeline succeeds"
@@ -37635,6 +37674,9 @@ msgstr ""
 msgid "Remove due date"
 msgstr ""
 
+msgid "Remove epic reference"
+msgstr ""
+
 msgid "Remove favicon"
 msgstr ""
 
@@ -37659,6 +37701,9 @@ msgstr ""
 msgid "Remove icon"
 msgstr ""
 
+msgid "Remove issue reference"
+msgstr ""
+
 msgid "Remove iteration"
 msgstr ""
 
@@ -37681,6 +37726,9 @@ msgid "Remove logo"
 msgstr ""
 
 msgid "Remove member"
+msgstr ""
+
+msgid "Remove merge request reference"
 msgstr ""
 
 msgid "Remove milestone"
