Add API support for plan limit notification limits
Allowing admins to update a plan limit's `notification_limit` value

Changelog: added
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -2234,6 +2234,9 @@ msgstr ""
 msgid "Access Tokens"
 msgstr ""
 
+msgid "Access denied"
+msgstr ""
+
 msgid "Access denied for your LDAP account."
 msgstr ""
 
