--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -7408,6 +7408,9 @@ msgstr ""
 msgid "Blame could not be loaded as a single page."
 msgstr ""
 
+msgid "Blame for binary files is not supported."
+msgstr ""
+
 msgid "BlobViewer|View on %{environmentName}"
 msgstr ""
 
