Refactors to vars, constants and error messages
- Also enforce exact version

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -1322,6 +1322,9 @@ msgstr ""
 msgid "'projects' is not yet supported"
 msgstr ""
 
+msgid "'schemaVersion' '%{given_version}' is not supported, it must be '%{required_version}'"
+msgstr ""
+
 msgid "'starterProjects' is not yet supported"
 msgstr ""
 
@@ -10979,6 +10982,9 @@ msgstr ""
 msgid "Command"
 msgstr ""
 
+msgid "Command id '%{command}' must not start with '%{prefix}'"
+msgstr ""
+
 msgid "Command line instructions"
 msgstr ""
 
@@ -11489,6 +11495,18 @@ msgid "ComplianceReport|Update result"
 msgstr ""
 
 msgid "Component"
+msgstr ""
+
+msgid "Component name '%{component}' for command id '%{command}' must not start with '%{prefix}'"
+msgstr ""
+
+msgid "Component name '%{component}' must not start with '%{prefix}'"
+msgstr ""
+
+msgid "Component type '%s' is not yet supported"
+msgstr ""
+
+msgid "Components must have a 'name'"
 msgstr ""
 
 msgid "Confidence"
@@ -16794,6 +16812,9 @@ msgstr ""
 msgid "End time"
 msgstr ""
 
+msgid "Endpoint name '%{endpoint}' of component '%{component}' must not start with '%{prefix}'"
+msgstr ""
+
 msgid "Ends"
 msgstr ""
 
@@ -17751,7 +17772,13 @@ msgstr ""
 msgid "Even if you reach the number of seats in your subscription, you can continue to add users, and GitLab will bill you for the overage."
 msgstr ""
 
+msgid "Event '%{event}' of type '%{event_type}' must not start with '%{prefix}'"
+msgstr ""
+
 msgid "Event tag (optional)"
+msgstr ""
+
+msgid "Event type '%s' is not yet supported"
 msgstr ""
 
 msgid "EventFilterBy|Filter by all"
@@ -24324,6 +24351,9 @@ msgstr ""
 msgid "Introducing Your DevOps Reports"
 msgstr ""
 
+msgid "Invalid 'schemaVersion' '%s'"
+msgstr ""
+
 msgid "Invalid Insights config file detected"
 msgstr ""
 
@@ -29284,6 +29314,9 @@ msgstr ""
 msgid "Multiple Prometheus integrations are not supported"
 msgstr ""
 
+msgid "Multiple components(%s) have 'gl/inject-editor' attribute"
+msgstr ""
+
 msgid "Multiple integrations of a single type are not supported for this project"
 msgstr ""
 
@@ -30005,7 +30038,7 @@ msgstr ""
 msgid "No component has 'gl/inject-editor' attribute"
 msgstr ""
 
-msgid "No components present in the devfile"
+msgid "No components present in devfile"
 msgstr ""
 
 msgid "No confirmation email received? Check your spam folder or %{request_link_start}request new confirmation email%{request_link_end}."
@@ -36500,6 +36533,9 @@ msgid "Promotions|You can restrict access to protected branches by choosing a ro
 msgstr ""
 
 msgid "Prompt users to upload SSH keys"
+msgstr ""
+
+msgid "Property 'dedicatedPod' of component '%s' is not yet supported"
 msgstr ""
 
 msgid "Protect"
@@ -49458,6 +49494,9 @@ msgid "ValueStreamEvent|Stop"
 msgstr ""
 
 msgid "Variable"
+msgstr ""
+
+msgid "Variable name '%{variable}' must not start with '%{prefix}'"
 msgstr ""
 
 msgid "Variable value will be evaluated as raw string."
